--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,17 +15,26 @@ html { height: 100% }
 body { height: 100%; margin: 0px; padding: 0px }
 #map_canvas { height: 100% }
 
-.rack,
+.rack {
+	width: 240px;
+	height: 192px;
+	position: relative;
+}
+.rack p {
+	position: absolute;
+	background: #fff;
+	background: rgba(255, 255, 255, .5);
+	top: 0;
+	left: 0;
+	padding: 5px;
+	margin: 0;
+	right: 0;
+	line-height: 1.1;
+}
 .rack img,
 .rack .panorama {
 	width: 240px;
-	height: 180px;
-}
-.rack {
-	position: relative;
-}
-.rack > * {
-	position: absolute;
+	height: 160px;
 }
 .rack img {
 	display: block;
@@ -33,17 +42,50 @@ body { height: 100%; margin: 0px; padding: 0px }
 	padding: 0;
 }
 .rack .res {
-	bottom: 0;
-	width: 50%;
-	height: 30px;
-	line-height: 30px;
-	background: rgba(255,255,255,.5);
-	text-align: center;
-	
+	width: 100%;
+	height: 32px;
+	line-height: 32px;
+	background: #fff;
+	text-align: left;
+	z-index: 1;	
 }
-.rack .locks {
-	left: 0;
+.rack .res strong {
+	padding-left: 10px;
 }
-.rack .bikes {
+.rack .res .icon {
+	float: right;
+	padding-right: 18px;
+	margin-left: 16px;
+}
+.icon {
+	background: url(/images/icons.png) no-repeat 999em 999em;
+	line-height: 32px;
+	height: 32px;
+	width: 32px;
+	position: relative;
+}
+.icon-lock {
+	background-position: 0 50%;
+	width: 25px;
+}
+.icon-bike {
+	background-position: -300px 50%;
+	width: 48px;
+}
+.data {
+	position: absolute;
+	top: 2px;
 	right: 0;
+	padding: 2px 10px;
+	line-height: 100%;
+	font-size: 15px;
+	text-align: center;
+	background-color: #727e94;
+	color: #fff;
+	text-shadow: 0 0 3px #000;
+	
+	-webkit-border-radius: 8px;
+	-moz-border-radius: 8px;
+	border-radius: 8px;
 }
+
