--- a/public/css/style.css
+++ b/public/css/style.css
@@ -89,3 +89,95 @@ body { height: 100%; margin: 0px; padding: 0px }
 	border-radius: 8px;
 }
 
+.controls {
+	margin: 5px;
+}
+.control-wrap {
+	float: left;
+}
+.control {
+	display: block;
+	text-decoration: none;
+    -moz-user-select: none;
+
+	background: -moz-linear-gradient(top, #FEFEFE, #F3F3F3) repeat scroll 0 0 transparent;
+	background: -webkit-gradient(linear, center top, center bottom, from(#FEFEFE), to(#F3F3F3));
+	background: -o-linear-gradient(top, #FEFEFE, #F3F3F3);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FEFEFE', endColorstr='#F3F3F3');
+	/*INNER ELEMENTS MUST NOT BREAK THIS ELEMENTS BOUNDARIES*/
+	/*Element must have a height (not auto)*/
+	/*All filters must be placed together*/
+	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#FEFEFE', endColorstr='#F3F3F3')";
+	/*Element must have a height (not auto)*/
+	/*All filters must be placed together*/
+	background: linear-gradient(top, #FEFEFE, #F3F3F3);
+	/*--IE9 DOES NOT SUPPORT GRADIENT BACKGROUNDS--*/
+		
+    border: 1px solid #a9bbdf;
+
+	-moz-box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.35);
+	-webkit-box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.35);
+	box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.35);
+
+    color: black;
+    direction: ltr;
+    font-family: Arial,sans-serif;
+    font-size: .75em;
+    font-weight: normal;
+    line-height: 160%;
+    min-width: 26px;
+    overflow: hidden;
+    padding: 0 6px;
+    text-align: center;
+}
+.control:hover {
+	border-color: #678ac7;
+}
+.control-wrap:first-child .control {
+    border-radius: 2px 0 0 2px;
+}
+.control-wrap:last-child .control {
+    border-radius: 0 2px 2px 0;
+}
+.control.active {
+	background: -moz-linear-gradient(top, #6D8ACC, #7B98D9) repeat scroll 0 0 transparent;
+	background: -webkit-gradient(linear, center top, center bottom, from(#6D8ACC), to(#7B98D9));
+	background: -o-linear-gradient(top, #6D8ACC, #7B98D9);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#6D8ACC', endColorstr='#7B98D9');
+	/*INNER ELEMENTS MUST NOT BREAK THIS ELEMENTS BOUNDARIES*/
+	/*Element must have a height (not auto)*/
+	/*All filters must be placed together*/
+	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#6D8ACC', endColorstr='#7B98D9')";
+	/*Element must have a height (not auto)*/
+	/*All filters must be placed together*/
+	background: linear-gradient(top, #6D8ACC, #7B98D9);
+	/*--IE9 DOES NOT SUPPORT GRADIENT BACKGROUNDS--*/
+
+    color: white;
+    font-weight: bold;
+	border-color: #678ac7;
+}
+.control.disabled {
+    color: #999;
+}
+.control.disabled:hover {
+    border-color: #a9bbdf;
+	cursor: default;
+}
+
+@media screen and (max-width: 420px) {
+	.control {
+		font-size: .875em;
+		padding: 4px 8px;
+	}
+}
+
+#locate {
+	display: block;
+	cursor: pointer;
+	text-indent: -99em;
+	width: 32px;
+	height: 32px;
+	margin: 5px;
+	background: url(/images/icons.png) no-repeat -600px 0;
+}
